--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>mTubi | <%= title %></title>
+    <% if (video) {%>
+       <meta content="MubiTubi - <%= video.title %> - Uploaded by: <%= video.uploader.global_name %> (<%= video.uploader.username %>)" property="og:title">
+       <meta property="og:type" content="video.movie">
+       <meta content="Uploaded by: <%= video.uploader.global_name %> (<%= video.uploader.username %>). Description: <%= video.description %>" property="og:description">
+       <meta property="twitter:player" content="<%= video.video %>">
+    <% } %>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/plyr@3.6.8/dist/plyr.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
