Atualizar o video.ejs

--- a/src/views/video.ejs
+++ b/src/views/video.ejs
@@ -1,4 +1,4 @@
-<%- include('partials/header', { title: video.title, video: video }) %>
+<%- include('partials/header', { title: "Video", video: video }) %>
 
 <div class="container">
     <video id="player" class="rounded-video" controls>
