Atualizar o video.ejs

--- a/src/views/video.ejs
+++ b/src/views/video.ejs
@@ -10,6 +10,7 @@
         <div class="card-body">
             <h2 class="card-title"><%= video.title %></h2>
             <p class="card-text"><%= video.description %></p>
+            <p><%= JSON.stringify(video) </p>
             <hr>
             <div class="media mt-4">
                 <p class="card-text">Uploader:</p>
