--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -1,59 +1,31 @@
-<!DOCTYPE html>
-<html lang="en" data-bs-theme="dark">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>mTubi | <%= title %></title>
-    <% if (title.includes("Video")) {%>
-       <meta content="MubiTubi - <%= video.title %> - Uploaded by: <%= video.uploader.global_name %> (<%= video.uploader.username %>)" property="og:title">
-       <meta property="og:type" content="video.movie">
-       <meta content="Uploaded by: <%= video.uploader.global_name %> (<%= video.uploader.username %>). Description: <%= video.description %>" property="og:description">
-       <meta property="twitter:player" content="<%= video.video %>">
-    <% } %>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/plyr@3.6.8/dist/plyr.css" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-</head>
-<body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <p> </p>
-        <a class="navbar-brand" href="/">
-            <img src="/images/logo.png" alt="MubiTubi Logo" width="200" height="50" class="d-inline-block align-top">
+<nav class="navbar">
+    <div class="logo">
+        <a href="/" style="text-decoration: none; color: inherit;"> <!-- Make logo clickable and inherit styles -->
+            <svg viewBox="0 0 24 24">
+                <path d="M21,3H3C1.89,3 1,3.89 1,5V17A2,2 0 0,0 3,19H8V21H16V19H21A2,2 0 0,0 23,17V5C23,3.89 22.1,3 21,3M21,17H3V5H21V17M16,11L9,15V7L16,11Z"/>
+            </svg>
+            MubiTubi
         </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav me-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="/">Home</a>
-                </li>
-                <% if (user) { %>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/upload">Upload</a>
-                    </li>
-                <% } %>
-            </ul>
-            <ul class="navbar-nav ms-auto">
-                <% if (user) { %>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle d-flex align-items-center" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            <img src="https://cdn.discordapp.com/avatars/<%= user.userId %>/<%= user.avatar %>.png?size=4096" alt="User Profile Picture" class="rounded-circle" width="30" height="30">
-                            <span class="ms-2">Welcome, <%= user.global_name %></span>
-                        </a>
-                        <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-                            <% if (user.isStaff) { %>
-                                <li><a class="dropdown-item" href="/dashboard">Dashboard</a></li>
-                                <li><hr class="dropdown-divider"></li>
-                            <% } %>
-                            <li><a class="dropdown-item" href="/settings">Settings</a></li>
-                            <li><a class="dropdown-item" href="/auth/logout">Logout</a></li>
-                        </ul>
-                    </li>
-                <% } else { %>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/login">Login</a>
-                    </li>
-                <% } %>
-            </ul>
-        </div>
-    </nav>
+    </div>
+    <div class="nav-items">
+        <a href="/" class="nav-link">Home</a>
+        <a href="/upload" class="upload-btn">Upload</a>
+        <% if (user) { %>
+            <li class="dropdown">
+                <span class="dropdown-toggle align-items-center" id="navbarDropdown" data-bs-toggle="dropdown" aria-expanded="false">
+                    <img src="https://cdn.discordapp.com/avatars/<%= user.userId %>/<%= user.avatar %>.png?size=4096" alt="User Profile Picture" class="rounded-circle" width="30" height="30">
+                    <span class="ms-2">Welcome, <%= user.global_name %></span>
+                </span>
+                <ul class="dropdown-menu dropdown-menu-end dropdown-menu-dark" aria-labelledby="navbarDropdown">
+                    <% if (user.isStaff) { %>
+                        <li><a class="dropdown-item" href="/dashboard">Dashboard</a></li>
+                        <li><hr class="dropdown-divider"></li>
+                    <% } %>
+                    <li><a class="dropdown-item" href="/auth/logout">Logout</a></li>
+                </ul>
+            </li>
+        <% } else { %>
+            <a href="/login" class="login-btn">Login</a>
+        <% } %>
+    </div>
+</nav>
